# PersonDetector

./: .gitignore
Projet/: CMakeLists.txt
Projet/src/: ImageReader.cpp  PersonDetector.cpp
doc/: Accès au dataset.docx  Travail à réaliser - unité “parallélisme” (2023).docx
